<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My App Portfolio</string>
    <string name="app_title">My Nanodegee Apps!</string>
    <string name="project_1">Popular Movies</string>
    <string name="project_2">Stock Hawk</string>
    <string name="project_3">Build it Bigger</string>
    <string name="project_4">Make Your App Material</string>
    <string name="project_5">Go Ubiquitous</string>
    <string name="project_6">Capstone</string>

    <string name="action_settings">Settings</string>

</resources>
