<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".portfolio"
    android:id="@+id/">

    <TextView
        android:id="@+id/app_title"
        android:text="@string/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/button"
            android:text="@string/project_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_title" />

        <Button
            android:id="@+id/button2"
            android:text="@string/project_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button" />

        <Button
            android:id="@+id/button3"
            android:text="@string/project_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button2" />

        <Button
            android:id="@+id/button4"
            android:text="@string/project_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button3" />

        udd<Button
            android:id="@+id/button5"
            android:text="@string/project_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button4" />

        <Button
            android:id="@+id/button6"
            android:text="@string/project_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button5"/>
</RelativeLayout>
